--- a/index.html
+++ b/index.html
@@ -1,55 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-    integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
-    crossorigin="anonymous"
-  />
-  <link rel="stylesheet" href="css/style.css">
-  <title>WebCage Chat App</title>
-</head>
-<body>
-  <div class="chat-container">
-    <header class="chat-header">
-      <h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
-      <a href="index.html" class="btn" id="leave-btn">Leave Room</a>
-    </header>
+<!doctype html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial=scale=1">
+		<title>url cyber palace</title>
+		<link rel="stylesheet" href="css/style.css">
+		<style>
+			body {
+				/* background: linear-gradient(rgba(0,0,0,1) 20%, rgba(70,192,22,1) 300%); */
+				/* position: relative;
+				box-sizing: border-box;
+				background-image: url('https://ak.picdn.net/shutterstock/videos/5890784/preview/stock-footage-one-minute-long-loop-features-white-clouds-floating-through-a-deep-blue-sky-fade-transition-at-end.mp4');
+				background-position: center;
+				background-size: cover; */
+			}
+			.loading {
+				color: black;
+				font-family: "Arial";
+				font-size: 24px;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
+			.loading::after {
+	      display: inline-block;
+	      animation: dotty steps(1,end) 2s infinite;
+	      content: '';
+	    }
+	    @keyframes dotty {
+	        0%   { content: ''; }
+	        25%  { content: '.'; }
+	        50%  { content: '..'; }
+	        75%  { content: '...'; }
+	        100% { content: ''; }
+	    }
 
-    <main class="chat-main">
-      <div class="chat-sidebar">
-        <h2 id="room-name"></h2>
-        <h3><i class="fas fa-user"></i> Online</h3>
-        <ul id="users">
-        </ul>
-      </div>
-      <div class="chat-messages">
-      </div>
-    </main>
+			.box {
+				height: 100px;
+				width: 320px;
+				opacity: 20%;
+				background-color: lightgray;
+				border: 1px solid black;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
 
-    <div class="chat-form-container">
-      <form id="chat-form">
-        <input
-          id="msg"
-          type="text"
-          placeholder="Type a Message"
-          required
-          autocomplete="off"
-        />
-        <button class="btn-plane"><i class="fas fa-paper-plane"></i> </button>
-      </form>
-    </div>
-  </div>
+			.fullscreen-bg {
+				filter: grayscale(100%);
+		    position: fixed;
+		    top: 0;
+		    right: 0;
+		    bottom: 0;
+		    left: 0;
+		    overflow: hidden;
+		    z-index: -100;
+			}
+			.fullscreen-bg__video {
+				position: relative;
+				box-sizing: border-box;
+				/* background-repeat: no-repeat; */
+				background-position: center;
+				background-size: cover;
+		    width: auto;
+		    height: 200%;
+			}
+		</style>
+	</head>
+	<body>
 
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
-    integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4="
-    crossorigin="anonymous"
-  ></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="js/main.js"></script>
-</body>
+		<div class="fullscreen-bg">
+	    <video loop muted autoplay poster="https://ak.picdn.net/shutterstock/videos/5890784/preview/stock-footage-one-minute-long-loop-features-white-clouds-floating-through-a-deep-blue-sky-fade-transition-at-end.mp4" class="fullscreen-bg__video">
+        <source src="https://ak.picdn.net/shutterstock/videos/5890784/preview/stock-footage-one-minute-long-loop-features-white-clouds-floating-through-a-deep-blue-sky-fade-transition-at-end.mp4" type="video/mp4">
+	    </video>
+		</div>
+
+		<div class="box">
+			<div class="loading">coming soon</div>
+		</div>
+
+		<!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5wzn5yw16p5&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script> -->
+	</body>
 </html>
